[package]
name = "librepod"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rss = "2.0.1"
reqwest = { version = "0.11.18", features = ["brotli", "gzip", "deflate"]}
futures = "0.3.28"
chrono = { version = "0.4.26", features = ["serde"]}
tokio = { version = "1.29.1", features = ["full"] }
uuid = { version = "1.4.0", features = ["v4", "v5", "serde"] }
http-cache-semantics = { version = "1.0.1", features = ["reqwest"] }
http = "0.2.9"
serde = { version = "1.0", features = ["derive"] }
url = { version = "2.4.0", features = ["serde"] }
bytes = "1.4.0"
http-serde = "1.1.2"
derivative = "2.2.0"
sqlx = { version = "0.6", features = [ "runtime-tokio-rustls", "postgres", "chrono", "uuid", "migrate" ] }
feed-rs = "1.3.0"
redis = { version = "0.23.0", features = ["tokio-comp", "connection-manager"]}
serde_json = "1.0"
anyhow = "1.0.71"
axum = "0.6.18"
tokio-cron-scheduler = "*"
envconfig = "0.10.0"
dotenv = "0.15.0"
regex = "1.9.1"
rand = {version = "0.8.5", features = ["std", "std_rng"]}
validator = { version = "0.15", features = ["derive"] }
lazy_static = "1.4.0"
rust-argon2 = "1.0.0"
derive_more = { version = "0.99.0", features = ["error", "display"]}
axum-login = { version = "0.5.0", features = ["sqlx", "postgres"] }
async-redis-session = "0.2.2"
tracing = "0.1"
tracing-subscriber = "0.3"
tower-http = { version = "0.4.1", features = ["cors", "trace"]}
mime = "0.3.17"
